--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -10,8 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Review new candidates
         id: review
-        run: |
-          ./candidate-snaps-review.py
+        run: ./candidate-snaps-review.py
       - name: report
         id: build-the-report
         run:  |
@@ -35,3 +34,5 @@ jobs:
           git config user.email "actions@github.com"
           git commit -m "Update the list of known candidate revisions"
           git push
+      - name: close-fixed-issues
+        run: ./close-fixed-issues.py https://api.github.com/repos/${{ github.repository }}/issues ${{ secrets.GITHUB_TOKEN }}
