--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -17,15 +17,17 @@ jobs:
       - name: report
         id: build-the-report
         run:  |
+          ls -l reports
           for f in reports/*.json; do \
              [ -f "$f" ] || continue; \
+             echo "$f" \
              curl --request POST \
             --url https://api.github.com/repos/${{ github.repository }}/issues \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
             --header 'content-type: application/json' \
-            --data-binary @$f \
-            --fail; \
+            --data-binary @$f; \
           done
+          echo "Check for changes to push to the vcs"
           if ! git diff --exit-code candidate.yml; then
             echo "::set-output name=changes::true"
           fi
