Disable cron job
The script moved under https://github.com/ubuntu/desktop-snaps, keep the
personnal one for now for testing and debug purpose but doing on manual
trigger is enough

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,9 +1,9 @@
 name: Report new candidates
 
 on:
-  schedule:
+  #schedule:
     # Daily for now
-    - cron: '9 7 * * *'
+  #  - cron: '9 7 * * *'
   workflow_dispatch:
 
 jobs:
